--- a/config/api.yaml
+++ b/config/api.yaml
@@ -1,18 +1,18 @@
 # 配置文件，在这里填写api
 
-weatherXinZhi: SeSI8hL-BdFhE9MKb #心知天气api   从https://www.seniverse.com/注册获取
+weatherXinZhi: SeSIadf8hL-BdFfdanhE9MKb #心知天气api   从https://www.seniverse.com/注册获取
 youdao:
-  app_id: 67edf72f6213c548      #有道翻译 https://ai.youdao.com/?keyfrom=fanyi-new-nav#/
-  app_key: XzFaBbE9zGdVLtpCJHzADWIXhHvdnB0T
-sauceno-api: b1f018dbf8b7c21c38b4d9ad0211f8db1c4eaf20 #sauceno搜图api，你可以从https://saucenao.com/user.php注册并获取
-moderate: 1f8e861f89cd6946bd3f8a82c68afeab   #色图审核api 从https://www.moderatecontent.com/获取
+  app_id: 67edf72f62fda13cdf548       #有道翻译 https://ai.youdao.com/?keyfrom=fanyi-new-nav#/
+  app_key: XzFaBbE9zGdVLtdafapCJHzADWIXhHvdnB0T
+sauceno-api: b1f0saf18dbf8b7c21cdfdafz38b4d9ad0211f8db1c4eaf20 #sauceno搜图api，你可以从https://saucenao.com/user.php注册并获取
+moderate: 207b10178c64089dvzv90ebfcd7f865d97a   #色图审核api 从https://www.moderatecontent.com/获取
 poe-api:
   - 1P4isHvJEfjgbIII3ALqnQ%3D%3D  #从poe.com抓取到token，可获取多个
 siZhiAi: #思知ai    从https://console.ownthink.com/login
-  - 5298b4b366987f06ab07b9015bb6a5a2    # 第一个apiKey
-  - 806948824e6e559ff64ba689901483be    # 第二个，你有几个就填几个，按照如下格式即可。多删少补
-nasa_api: HSSp7kMHlCLaK8rbu3Hk4qup77JoKDKKddu2tdmM           # nasa相关天文api 从https://api.nasa.gov/index.html#main-content申请
+  - 6f628cf3622767516a3f8030a98342182bd6    # 第一个apiKey
+  - 06f0ebeb99aa2e92f33bb2c12182883224456    # 第二个，你有几个就填几个，按照如下格式即可。多删少补
+nasa_api: dfafhalsdfalfdj              # nasa相关天文api 从https://api.nasa.gov/index.html#main-content申请
 e-hentai: ipb_session_id=bc46d5c21d; ipb_member_id=7584785; ipb_pass_hash=8e9aac17; sk=wo63 #抓取ehentai的cookies,方式https://pic-image-search.kituin.fun/wiki/picimagesearch/E-hentai/DataStructure/#cookies%E8%8E%B7%E5%8F%96
-chatGLM: a917043b7ea630e311169a95d12c9230.28IZrQLuRi8peQqV #chatGLM的apiKey，从https://open.bigmodel.cn/获取
+chatGLM: sdfafjsadlf;aldf #chatGLM的apiKey，从https://open.bigmodel.cn/获取
 proxy: 'http://127.0.0.1:1080'  #代理 自己设置对应的端口，没有就不填
 
