--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,3 @@
-botId: 102056824 #填写你的bot id
-secret: nhMr7D5lCTVMzRfi #你的secret
+botId: 10224 #填写你的bot id
+secret: nhMrMzRfi #你的secret
 botName: yucca
